fix: fixing responsive background, text, header spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -190,3 +190,6 @@ color: white!important;
       text-decoration: none;
       opacity: 0.5;
     }
+    .paypal-button.paypal-button-color-gold, .paypal-button-row.paypal-button-color-gold .menu-button {
+      background: red!important;
+  }
